--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -20,28 +23,30 @@
     <!-- HEADER -->
 
     <header class="header">
-        <nav>
-            <a class="header-logo link" href="./"><span class="logo-accent">Web</span>Studio</a>
-            <ul class="list">
+        <div class="container header-container">
+            <nav class="header-nav">
+                <a class="header-logo link" href="./"><span class="logo-accent">Web</span>Studio</a>
+                <ul class="list header-list">
+                    <li>
+                        <a class="header-list-link link" href="./">Студія</a>
+                    </li>
+                    <li>
+                        <a class="header-list-link link" href="./portfolio.html">Портфоліо</a>
+                    </li>
+                    <li>
+                        <a class="header-list-link link" href="#">Контакти</a>
+                    </li>
+                </ul>
+            </nav>
+            <ul class="list header-contact-list">
                 <li>
-                    <a class="header-list-link link" href="./">Студія</a>
+                    <a class="header-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a class="header-list-link link" href="./portfolio.html">Портфоліо</a>
-                </li>
-                <li>
-                    <a class="header-list-link link" href="#">Контакти</a>
+                    <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
-        </nav>
-        <ul class="list">
-            <li>
-                <a class="header-contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
+        </div>
     </header>
 
     <!-- END HEADER -->
@@ -51,44 +56,48 @@
         <!-- HERO -->
 
         <section class="section-hero">
-            <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
-            <button class="hero-btn btn" type="button">Замовити послугу</button>
+            <div class="container hero-container">
+                <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
+                <button class="hero-btn btn" type="button">Замовити послугу</button>
+            </div>
         </section>
 
         <!-- END HERO -->
         <!-- ABOUT -->
 
         <section>
-            <h2 class="about-item visually-hidden">Про нас</h2>
-            <ul class="list">
-                <li>
-                    <h3 class="about-title">Увага до діталей</h3>
-                    <p class="about-text">
-                        Ідейні міркування, і навіть початок повсякденної роботи з
-                        формування позиції.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="about-title">Пунктуальність</h3>
-                    <p class="about-text">
-                        Завдання організації, особливо рамки і місце навчання кадрів тягне
-                        у себе.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="about-title">Планування</h3>
-                    <p class="about-text">
-                        Так само консультація з широким активом значною мірою зумовлює.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="about-title">Сучасні технології</h3>
-                    <p class="about-text">
-                        Значимість цих проблем настільки очевидна, що реалізація планових
-                        завдань.
-                    </p>
-                </li>
-            </ul>
+            <div class="container section">
+                <h2 class="about-item visually-hidden">Про нас</h2>
+                <ul class="list about-list">
+                    <li class="about-list-item">
+                        <h3 class="about-title">Увага до діталей</h3>
+                        <p class="about-text">
+                            Ідейні міркування, і навіть початок повсякденної роботи з
+                            формування позиції.
+                        </p>
+                    </li>
+                    <li class="about-list-item">
+                        <h3 class="about-title">Пунктуальність</h3>
+                        <p class="about-text">
+                            Завдання організації, особливо рамки і місце навчання кадрів тягне
+                            у себе.
+                        </p>
+                    </li>
+                    <li class="about-list-item">
+                        <h3 class="about-title">Планування</h3>
+                        <p class="about-text">
+                            Так само консультація з широким активом значною мірою зумовлює.
+                        </p>
+                    </li>
+                    <li class="about-list-item">
+                        <h3 class="about-title">Сучасні технології</h3>
+                        <p class="about-text">
+                            Значимість цих проблем настільки очевидна, що реалізація планових
+                            завдань.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- END ABOUT -->
@@ -96,19 +105,22 @@
         <!-- ACTIVITY -->
 
         <section>
-            <h2 class="activity-title">Чим ми займаємося</h2>
-            <ul class="list">
-                <li>
-                    <img src="./images/activity/box-1.jpg" alt="Програмування веб-сайтів" width="370" height="294" />
-                </li>
-                <li>
-                    <img src="./images/activity/box-2.jpg" alt="Створення додатків на смартфон" width="370"
-                        height="294" />
-                </li>
-                <li>
-                    <img src="./images/activity/box-3.jpg" alt="Веб-дизайн сторінок" width="370" height="294" />
-                </li>
-            </ul>
+            <div class="container section">
+                <h2 class="activity-title">Чим ми займаємося</h2>
+                <ul class="list activity-list">
+                    <li>
+                        <img src="./images/activity/box-1.jpg" alt="Програмування веб-сайтів" width="370"
+                            height="294" />
+                    </li>
+                    <li>
+                        <img src="./images/activity/box-2.jpg" alt="Створення додатків на смартфон" width="370"
+                            height="294" />
+                    </li>
+                    <li>
+                        <img src="./images/activity/box-3.jpg" alt="Веб-дизайн сторінок" width="370" height="294" />
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- END ACTIVITY -->
@@ -116,29 +128,31 @@
         <!-- TEAM -->
 
         <section class="section-team">
-            <h2 class="team-title">Наша команда</h2>
-            <ul class="list">
-                <li class="team-list-item">
-                    <img src="./images/team/team-1.jpg" alt="фото працівника - Ігорь" width="270" height="260" />
-                    <h3 class="team-list-title">Ігор Дем'яненко</h3>
-                    <p class="team-list-text">Product Designer</p>
-                </li>
-                <li class="team-list-item">
-                    <img src="./images/team/team-2.jpg" alt="фото працівниці - Ольга" width="270" height="260" />
-                    <h3 class="team-list-title">Ольга Рєпіна</h3>
-                    <p class="team-list-text">Frontend Developer</p>
-                </li>
-                <li class="team-list-item">
-                    <img src="./images/team/team-3.jpg" alt="фото працівника - Микола" width="270" height="260" />
-                    <h3 class="team-list-title">Микола Тарасов</h3>
-                    <p class="team-list-text">Marketing</p>
-                </li>
-                <li class="team-list-item">
-                    <img src="./images/team/team-4.jpg" alt="фото працівника - Михайло" width="270" height="260" />
-                    <h3 class="team-list-title">Михайло Єрмаков</h3>
-                    <p class="team-list-text">UI Designer</p>
-                </li>
-            </ul>
+            <div class="container section">
+                <h2 class="team-title">Наша команда</h2>
+                <ul class="list team-list">
+                    <li class="team-list-item">
+                        <img src="./images/team/team-1.jpg" alt="фото працівника - Ігорь" width="270" height="260" />
+                        <h3 class="team-list-title">Ігор Дем'яненко</h3>
+                        <p class="team-list-text">Product Designer</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img src="./images/team/team-2.jpg" alt="фото працівниці - Ольга" width="270" height="260" />
+                        <h3 class="team-list-title">Ольга Рєпіна</h3>
+                        <p class="team-list-text">Frontend Developer</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img src="./images/team/team-3.jpg" alt="фото працівника - Микола" width="270" height="260" />
+                        <h3 class="team-list-title">Микола Тарасов</h3>
+                        <p class="team-list-text">Marketing</p>
+                    </li>
+                    <li class="team-list-item">
+                        <img src="./images/team/team-4.jpg" alt="фото працівника - Михайло" width="270" height="260" />
+                        <h3 class="team-list-title">Михайло Єрмаков</h3>
+                        <p class="team-list-text">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <!-- END TEAM -->
@@ -149,22 +163,24 @@
     <!-- FOOTER -->
 
     <footer class="footer">
-        <a class="footer-logo link" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
-        <address>
-            <ul class="list">
-                <li>
-                    <a class="map-link link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
-                        rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі
-                        Украінки, 26</a>
-                </li>
-                <li>
-                    <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-        </address>
+        <div class="container footer-container">
+            <a class="footer-logo link" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
+            <address>
+                <ul class="list footer-list">
+                    <li class="footer-list-item">
+                        <a class="map-link link" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank"
+                            rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі
+                            Украінки, 26</a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    </li>
+                    <li class="footer-list-item">
+                        <a class="address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </address>
+        </div>
         <!-- END FOOTER -->
     </footer>
 </body>
