--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a class="header-logo link" href="./"><span class="logo-accent">Web</span>Studio</a>
                 <ul class="list header-list">
                     <li>
-                        <a class="header-list-link link" href="./">Студія</a>
+                        <a class="header-list-link-active link" href="./">Студія</a>
                     </li>
                     <li>
                         <a class="header-list-link link" href="./portfolio.html">Портфоліо</a>
@@ -56,7 +56,7 @@
         <!-- HERO -->
 
         <section class="section-hero">
-            <div class="container hero-container">
+            <div class="container">
                 <h1 class="hero">Ефективні рішення для вашого бізнесу</h1>
                 <button class="hero-btn btn" type="button">Замовити послугу</button>
             </div>
@@ -65,8 +65,8 @@
         <!-- END HERO -->
         <!-- ABOUT -->
 
-        <section>
-            <div class="container section">
+        <section class="section">
+            <div class="container">
                 <h2 class="about-item visually-hidden">Про нас</h2>
                 <ul class="list about-list">
                     <li class="about-list-item">
@@ -104,8 +104,8 @@
 
         <!-- ACTIVITY -->
 
-        <section>
-            <div class="container section">
+        <section class="section-activity">
+            <div class="container">
                 <h2 class="activity-title">Чим ми займаємося</h2>
                 <ul class="list activity-list">
                     <li>
@@ -127,29 +127,37 @@
 
         <!-- TEAM -->
 
-        <section class="section-team">
-            <div class="container section">
+        <section class="section-team section">
+            <div class="container">
                 <h2 class="team-title">Наша команда</h2>
                 <ul class="list team-list">
                     <li class="team-list-item">
                         <img src="./images/team/team-1.jpg" alt="фото працівника - Ігорь" width="270" height="260" />
-                        <h3 class="team-list-title">Ігор Дем'яненко</h3>
-                        <p class="team-list-text">Product Designer</p>
+                        <div class="team-info">
+                            <h3 class="team-list-title">Ігор Дем'яненко</h3>
+                            <p class="team-list-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/team/team-2.jpg" alt="фото працівниці - Ольга" width="270" height="260" />
-                        <h3 class="team-list-title">Ольга Рєпіна</h3>
-                        <p class="team-list-text">Frontend Developer</p>
+                        <div class="team-info">
+                            <h3 class="team-list-title">Ольга Рєпіна</h3>
+                            <p class="team-list-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/team/team-3.jpg" alt="фото працівника - Микола" width="270" height="260" />
-                        <h3 class="team-list-title">Микола Тарасов</h3>
-                        <p class="team-list-text">Marketing</p>
+                        <div class="team-info">
+                            <h3 class="team-list-title">Микола Тарасов</h3>
+                            <p class="team-list-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-list-item">
                         <img src="./images/team/team-4.jpg" alt="фото працівника - Михайло" width="270" height="260" />
-                        <h3 class="team-list-title">Михайло Єрмаков</h3>
-                        <p class="team-list-text">UI Designer</p>
+                        <div class="team-info">
+                            <h3 class="team-list-title">Михайло Єрмаков</h3>
+                            <p class="team-list-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -162,8 +170,8 @@
 
     <!-- FOOTER -->
 
-    <footer class="footer">
-        <div class="container footer-container">
+    <footer class="footer section-footer">
+        <div class="container">
             <a class="footer-logo link" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
             <address>
                 <ul class="list footer-list">
