--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 <body>
     <!-- HEADER -->
 
-    <header class="header">
+    <header class="header header-portfolio">
         <div class="container header-container">
             <nav class="header-nav">
                 <a class="header-logo link" href="./"><span class="logo-accent">Web</span>Studio</a>
@@ -31,7 +31,7 @@
                         <a class="header-list-link link" href="./">Студія</a>
                     </li>
                     <li>
-                        <a class="header-list-link link" href="./portfolio.html">Портфоліо</a>
+                        <a class="header-list-link-active link" href="./portfolio.html">Портфоліо</a>
                     </li>
                     <li>
                         <a class="header-list-link link" href="#">Контакти</a>
@@ -53,8 +53,8 @@
 
     <!-- MAIN -->
     <main>
-        <section>
-            <div class="container portfolio-main">
+        <section class="section">
+            <div class="container">
                 <h1 class="visually-hidden">Portfolio</h1>
                 <ul class="list portfolio-list">
                     <li>
@@ -79,71 +79,89 @@
                         <a class="link" href="">
                             <img src="./images/portfolio/img-1.jpg" alt="Зображення з веб-сайтом на моніторі ноутбука"
                                 width="370" height="294">
-                            <h2 class="card-title">Технокряк</h2>
-                            <p class="card-text">Веб-сайт</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Технокряк</h2>
+                                <p class="card-text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-2.jpg" alt="Постер із двома баскетболістами" width="370"
                                 height="294">
-                            <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="card-text">Дизайн</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="card-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-3.jpg" alt="Логотип рибного ресторану" width="370"
                                 height="294">
-                            <h2 class="card-title">Ресторан Seafood</h2>
-                            <p class="card-text">Додаток</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Ресторан Seafood</h2>
+                                <p class="card-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-4.jpg" alt="Зображення навушників" width="370"
                                 height="294">
-                            <h2 class="card-title">Проєкт Prime</h2>
-                            <p class="card-text">Маркетинг</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Проєкт Prime</h2>
+                                <p class="card-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-5.jpg" alt="Дві картонні коробки" width="370" height="294">
-                            <h2 class="card-title">Проєкт Boxes</h2>
-                            <p class="card-text">Додаток</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Проєкт Boxes</h2>
+                                <p class="card-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-6.jpg" alt="Зображення веб-сайту у темній темі" width="370"
                                 height="294">
-                            <h2 class="card-title">Inspiration has no Borders</h2>
-                            <p class="card-text">Веб-сайт</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Inspiration has no Borders</h2>
+                                <p class="card-text">Веб-сайт</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-7.jpg" alt="Журнал з картинками та статтями" width="370"
                                 height="294">
-                            <h2 class="card-title">Видання Limited Edition</h2>
-                            <p class="card-text">Дизайн</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Видання Limited Edition</h2>
+                                <p class="card-text">Дизайн</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-8.jpg" alt="Зображення цінника для одягу" width="370"
                                 height="294">
-                            <h2 class="card-title">Проєкт LAB</h2>
-                            <p class="card-text">Маркетинг</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Проєкт LAB</h2>
+                                <p class="card-text">Маркетинг</p>
+                            </div>
                         </a>
                     </li>
                     <li>
                         <a class="link" href="">
                             <img src="./images/portfolio/img-9.jpg" alt="Зображення програми для ноутбука" width="370"
                                 height="294">
-                            <h2 class="card-title">Growing Business</h2>
-                            <p class="card-text">Додаток</p>
+                            <div class="card-info">
+                                <h2 class="card-title">Growing Business</h2>
+                                <p class="card-text">Додаток</p>
+                            </div>
                         </a>
                     </li>
                 </ul>
@@ -155,8 +173,8 @@
     <!-- END MAIN -->
     <!-- FOOTER -->
 
-    <footer class="footer">
-        <div class="container footer-container">
+    <footer class="footer section-footer">
+        <div class="container">
             <a class="footer-logo link" href="./index.html"><span class="logo-accent">Web</span>Studio</a>
             <address>
                 <ul class="list footer-list">
